--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -16,7 +16,8 @@
 
 body {
   font-family: "Montserrat", sans-serif;
-  font-size: 14px; }
+  font-size: 14px;
+   }
 
 h1,
 h2,
@@ -116,7 +117,7 @@ img {
   margin-right: 50px !important; }
 
 .pb-70 {
-  padding-bottom: 70px !important; }
+  padding-bottom: 20px !important; }
 
 /* :: 3.2.0 Height */
 .height-400 {
@@ -140,7 +141,7 @@ img {
   padding-bottom: 100px; }
 
 .section-padding-100-0 {
-  padding-top: 100px;
+  padding-top: 20px;
   padding-bottom: 0; }
 
 .section-padding-0-100 {
